# roster

./: .gitignore  .gitleaks.toml  .landmark.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  VISION.md  deny.toml
.github/workflows/: ci.yml  pages.yml  release.yml
agents/ai-scout/: instructions.md  role.yaml
agents/boss/: instructions.md  role.yaml
agents/builder/: instructions.md  role.yaml
agents/cerberus/: instructions.md  role.yaml
agents/designer/: instructions.md  role.yaml
agents/incident-hound/: instructions.md  role.yaml
agents/lead/: instructions.md  role.yaml
agents/oracle/: instructions.md  role.yaml
agents/orchestrator/: instructions.md  role.yaml
agents/simons/: instructions.md  role.yaml
agents/sweep/: instructions.md  role.yaml
agents/verifier/: instructions.md  role.yaml
crates/roster-api/: Cargo.toml
crates/roster-api/src/: lib.rs  main.rs  ui.rs
crates/roster-api/tests/: serve.rs
crates/roster-canary/: Cargo.toml
crates/roster-canary/src/: lib.rs
crates/roster-cli/: Cargo.toml
crates/roster-cli/src/: adapter.rs  canary.rs  check.rs  doctor.rs  main.rs  picker.rs  process.rs  receipt.rs  sync.rs
crates/roster-cli/tests/: canary.rs  check.rs  cli.rs  doctor.rs  release_distribution.rs  v02_cli.rs
crates/roster-core/: Cargo.toml
crates/roster-core/src/: lib.rs
crates/roster-core/tests/: loader.rs  mcps.rs  models.rs  providers.rs  public_library.rs  tiers.rs  v02.rs
crates/roster-hooks/: Cargo.toml
crates/roster-hooks/src/: claude_hooks.rs  invocation_kind.rs  main.rs  secret_redaction.rs
crates/roster-hooks/tests/: claude_hook.rs
crates/roster-mcp/: Cargo.toml
crates/roster-mcp/src/: lib.rs  main.rs
crates/roster-mcp/tests/: mcp.rs
docs/: CONTRACTS.md  INTEGRATION_GUIDE.md  RELEASING.md  SECURITY.md  harness-kit-disposition-ledger.md  roster-915-schema-decision.md
docs/plans/: roster-v02-primitives-compiler.html
docs/releases/: v0.2.0-acceptance.md  v0.2.1-acceptance.md
docs/research/: roster-926-import-design-brief.md  roster-eval-factory-2026-07-13.md
evals/: card-oracle-triage-v0.json
evals/fixtures/card-oracle-triage-v0/: bl-bastion-blocked-but-oracled.md  bl-bb-report-preservation.md  bl-bb-webhook-debuggability.md  bl-bbdash-readonly-mcp.md  bl-cerberus-parked-but-oracled.md  bl-powder-kanban-ui.md  bl-r90-steps-not-checks.md  bl-sploot-agent-operable.md  deg-aesthetic-gallery.md  deg-bbdash-comic-ops.md  deg-doomscrum-distribution.md  deg-doomscrum-marketing-site.md  deg-doomscrum-persona-qa.md  deg-hk-opencode-bakeoff.md  deg-rkc-nonprofit-package.md  deg-sploot-extension-ux.md  deg-standby-close-loop.md  deg-weave-doc-sync.md  live-aesthetic-nav-lab.md  live-canary-empty-card.md  live-canary-responder-gate.md  live-crucible-environments.md  live-crucible-epochs-body-oracle.md  live-exocortex-boundary-scrub.md  live-powder-ci-gate.md  syn-cairn-onboarding.md  syn-fleet-docs-refresh.md  syn-glass-sluggish.md  syn-powder-board-clutter.md
examples/: config.yaml
harnesses/antigravity-cli/: README.md
harnesses/antigravity-ide/: README.md
harnesses/claude/: README.md  settings.json
harnesses/codex/: README.md  config.toml
harnesses/omp/: README.md
harnesses/pi/: README.md  settings.json
packaging/: install.sh
packs/: agent-creation.yaml  ai-scout.yaml  arbitration.yaml  build.yaml  code-review.yaml  design.yaml  engineering-core.yaml  estate-infrastructure-bounded-reversible.yaml  estate-infrastructure-exact-plan-mutation.yaml  estate-infrastructure-manage.yaml  estate-infrastructure-observe-plan.yaml  incident.yaml  orchestration.yaml  research.yaml  simons.yaml  starter.yaml  verification.yaml  work-ledger-powder.yaml
primitives/: models.yaml  providers.yaml  subagent-pool.yaml  tiers.yaml
primitives/doctrine/: escalation-and-composition.md  model-native-first.md  radical-simplicity.md
primitives/guidance/: agent-creator.md  ai-capability-scout.md  builder.md  code-reviewer.md  decision-arbiter.md  delegation.md  designer.md  engineering.md  estate-infrastructure-bounded-reversible.md  estate-infrastructure-exact-plan-mutation.md  estate-infrastructure-manage.md  estate-infrastructure-observe-plan.md  incident-investigator.md  orchestrator.md  research-sweeper.md  simons.md  verifier.md  work-ledger.md
primitives/mcps/: factory-mcps.yaml  registry.yaml
primitives/shared/: AGENTS.md
primitives/shared/references/: application-floor.md  collapse-toward-declaration.md  delete-first.md  image-generation.md  interrogate-first.md  learnings.md  lenses.md  loop-readiness.md  model-capability-ledger.md  model-native-product-primitives.md  op-1password-bootstrap.md  prompting-frontier.md  quality-gates.md  quality-system.md  routing.md  skill-authoring-standard.md  verification-system-first.md  works-critique.md
primitives/skills/: skills-index.yaml
primitives/skills/.external/: README.md  registry.yaml
primitives/skills/artifact/: SKILL.md
primitives/skills/ci/: SKILL.md
primitives/skills/code-review/: SKILL.md
primitives/skills/compound/: SKILL.md
primitives/skills/council/: SKILL.md
primitives/skills/deliver/: SKILL.md
primitives/skills/design/: SKILL.md
primitives/skills/diagnose/: SKILL.md
primitives/skills/document/: SKILL.md
primitives/skills/estate-infrastructure/: SKILL.md
primitives/skills/eval-design/: SKILL.md
primitives/skills/factory-apps/: SKILL.md
primitives/skills/grilling/: SKILL.md
primitives/skills/groom/: SKILL.md
primitives/skills/harness-engineering/: SKILL.md
primitives/skills/human-writing/: SKILL.md
primitives/skills/image-gen/: SKILL.md
roles/: agent-creator.yaml  ai-capability-scout.yaml  builder.yaml  code-reviewer.yaml  decision-arbiter.yaml  designer.yaml  incident-investigator.yaml  orchestrator.yaml  research-sweeper.yaml  simons.yaml  starter.yaml  verifier.yaml
scripts/: check-release-version  fetch-landmark  generate-agents-page.py  package-release  publication-security-gate
site/: DESIGN.md  changelog.html  features.html  get-started.html  index.html  marketing.css
(+254 files in other folders)
