[workspace]
members = [
    "crates/roster-core",
    "crates/roster-cli",
    "crates/roster-mcp",
    "crates/roster-hooks",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/misty-step/roster"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
predicates = "3.1.3"
roster-core = { path = "crates/roster-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.17"
ureq = { version = "2.12.1", features = ["json"] }
