[workspace]
members = [
    "crates/roster-core",
    "crates/roster-canary",
    "crates/roster-cli",
    "crates/roster-mcp",
    "crates/roster-api",
    "crates/roster-hooks",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/misty-step/roster"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
predicates = "3.1.3"
roster-canary = { path = "crates/roster-canary", version = "0.1.0" }
roster-core = { path = "crates/roster-core", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
thiserror = "2.0.17"
tower-http = { version = "0.6.6", features = ["catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "registry",
    "fmt",
    "env-filter",
] }
ureq = { version = "2.12.1", features = ["json"] }
