[workspace]
members = [
    "crates/roster-core",
    "crates/roster-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://misty-step.github.io/roster/"
license = "MIT"
repository = "https://github.com/misty-step/roster"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.99"
assert_cmd = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
libc = "0.2"
predicates = "3.1.3"
roster-core = { path = "crates/roster-core", version = "0.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
signal-hook = "0.3.18"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
unicode-width = "0.2.2"
