[package]
name = "roster-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "roster-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = "0.8"
clap.workspace = true
roster-mcp = { path = "../roster-mcp", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
ureq.workspace = true
