[package]
name = "roster-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "roster"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap.workspace = true
libc.workspace = true
roster-canary.workspace = true
roster-core.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ureq.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
