[package]
name = "roster-cli"
version = "0.2.0"
description = "Compose and launch exact Codex, Claude Code, and OMP agent environments"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
keywords = ["agents", "ai", "cli", "codex", "claude"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "roster"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap.workspace = true
crossterm = "0.29.0"
libc.workspace = true
roster-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
signal-hook.workspace = true
toml.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
