[package]
name = "roster-hooks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "roster-hooks"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
regex = "1.11.1"
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
