[package]
name = "roster-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "roster-mcp"
path = "src/main.rs"

[dependencies]
roster-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
